<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/downloadImage"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:contentDescription="@string/download_image_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/download_image" />

    <RadioGroup
        android:id="@+id/downloadRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/downloadImage">

        <RadioButton
            android:id="@+id/glideDownlaodRadioButton"
            style="@style/textStyleForRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="24dp"
            android:paddingStart="10dp"
            android:text="@string/glide_radio_button_text" />

        <RadioButton
            android:id="@+id/appDownloadRadioButton"
            style="@style/textStyleForRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="24dp"
            android:paddingStart="10dp"
            android:text="@string/app_download_radio_button_text" />

        <RadioButton
            android:id="@+id/retrofitDownloadRadioButton"
            style="@style/textStyleForRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:paddingStart="10dp"
            android:text="@string/retrofit_download_radio_button_text" />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.example.android.finalloadapp.ButtonView
            android:id="@+id/downloadViewButton"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:downloadBackgroundColor="#009688"
            app:downloadText="Download"
            app:loadingBackgroundColor="#0520BA"
            app:loadingText="We are loading..."
            app:textColor="#FFFFFF" />

        <com.example.android.finalloadapp.CircleView
            android:id="@+id/circleViewButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:circleBackgroundColor="#FF0000"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="45dp"/>

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>